[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "springtime"
description = "Spatiotemporal phenology research with interpretable models"
readme = "README.md"
requires-python = ">=3.7"
license = "AGPL-3.0-or-later AND Apache-2.0 AND CC-BY-4.0 AND CC0-1.0 AND GPL-2.0-only"
keywords = [
  "phenology",
]
authors = [
  { name = "Peter Kalverla", email = "peter.kalverla@gmx.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "xarray",
  "pyphenology",
  "scipy",  # unspecified dependency of pyphenology
  "joblib",  # unspecified dependency of pyphenology
  "pyyaml",
  "pandas",
  "pydantic",
  "click",
  "geopandas",
  "dask",  # needed for xarray.open_mfdataset()
  "netCDF4",
]
dynamic = ["version"]

[project.optional-dependencies]
r = [
  "rpy2",
]
dev = [
  "black",
  "mypy",
  "pytest",
  "reuse",
  "ruff",
  "types-pyyaml", # https://github.com/python/mypy/issues/10632
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.0.0,<9.0.0",
  "mkdocs-jupyter>=0.22.0",
  "mkdocs-gen-files",
  "mkdocs-include-markdown-plugin",
]

[project.urls]
Documentation = "https://github.com/phenology/springtime#readme"
Issues = "https://github.com/phenology/springtime/issues"
Source = "https://github.com/phenology/springtime"

[project.scripts]
springtime = "springtime.main:cli"

[tool.hatch.version]
path = "src/springtime/__init__.py"

[tool.hatch.envs.default]
features = ["r", "dev", "docs"]

[tool.hatch.envs.default.scripts]
quality-checks = [
  "reuse lint",
  "black src tests",
  "ruff check src tests --fix",
  "mypy src tests",
  "pytest",
]

[tool.mypy]
ignore_missing_imports = true
