# SPDX-FileCopyrightText: 2023 Springtime authors
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "springtime"
description = "Spatiotemporal phenology research with interpretable models"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later AND Apache-2.0 AND CC-BY-4.0 AND CC0-1.0 AND GPL-2.0-only"
keywords = [
  "phenology",
]
authors = [
  { name = "Peter Kalverla", email = "peter.kalverla@gmx.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "xarray",
  "pyphenology",
  "scipy",  # unspecified dependency of pyphenology
  "interpret",
  "joblib",  # unspecified dependency of pyphenology
  "pyyaml",
  "pandas",
  "pycaret[models]",
  "pydantic==1.10.11",
  "click==8.1.3", # Workaround until https://github.com/pallets/click/issues/2558 is fixed
  "geopandas",
  "dask",  # needed for xarray.open_mfdataset()
  "netCDF4",
  "merf@git+https://github.com/phenology/merf.git",
  "xdg-base-dirs",
]
dynamic = ["version"]

[project.optional-dependencies]
r = [
  "rpy2",
]
dev = [
  "black",
  "mypy",
  "pytest",
  "reuse",
  "ruff",
  "types-pyyaml", # https://github.com/python/mypy/issues/10632
  "types-requests",
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.0.0,<9.0.0",
  "mkdocs-jupyter>=0.22.0",
  "mkdocs-gen-files",
  "mkdocs-include-markdown-plugin",
  "mkdocstrings[python]",
  "mkdocs-literate-nav",
]

[project.urls]
Documentation = "https://github.com/phenology/springtime#readme"
Issues = "https://github.com/phenology/springtime/issues"
Source = "https://github.com/phenology/springtime"

[project.scripts]
springtime = "springtime.main:cli"

[tool.hatch.version]
path = "src/springtime/__init__.py"

[tool.hatch.envs.default]
features = ["r", "dev", "docs"]

[tool.hatch.envs.default.scripts]
quality-checks = [
  "black src tests",
  "ruff check src tests --fix",
  "mypy src tests",
  "reuse lint",
]
doctest = "pytest --doctest-modules --doctest-report none src/springtime/datasets/NPNPhenor.py"

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true
